--- a/MNIST_Example_clean.ipynb
+++ b/MNIST_Example_clean.ipynb
@@ -283,7 +283,7 @@
     "import numpy\n",
     "# this loads already theta values for all labels.\n",
     "# we want to check it however just for one label\n",
-    "w_check = numpy.load('data/nn_theta_check.npy')\n",
+    "w_check = numpy.load('nn_theta_check.npy')\n",
     "\n",
     "expected_loss = nn_loss_function(w_check, X_train[0:5000],\n",
     "                                 mytools.encode_one_hot(y_train[0:5000], 10),\n",
