--- a/IntroductionToNeuralNetworksClean.ipynb
+++ b/IntroductionToNeuralNetworksClean.ipynb
@@ -750,6 +750,24 @@
     " \\quad and \\quad \\pmb{b^{(n)}}= \\begin{pmatrix} b_0^{(n)} \\\\ .. \\\\ b_j^{(n)}\\\\ .. \\end{pmatrix}\n",
     "$$\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References ##\n",
+    "*The calculation example with code snippets are adapted from:* <br>\n",
+    "https://towardsdatascience.com/machine-learning-for-beginners-an-introduction-to-neural-networks-d49f22d238f9\n",
+    "\n",
+    "__Further reading:__<br>\n",
+    "Bishop, Christopher M. Pattern recognition and machine learning. springer, 2006.  \n",
+    "Bishop, Christopher M. Neural networks for pattern recognition. Oxford university press, 1995.  \n",
+    "<br>\n",
+    "https://skymind.ai/wiki/neural-network  \n",
+    "https://ujjwalkarn.me/2016/08/09/quick-intro-neural-networks/  \n",
+    "http://neuralnetworksanddeeplearning.com/chap1.html  \n",
+    "https://www.youtube.com/watch?v=aircAruvnKk  \n"
+   ]
   }
  ],
  "metadata": {
