Including coding examples from Tutorial, and cleaning up

--- a/IntroductionToNeuralNetworksClean.ipynb
+++ b/IntroductionToNeuralNetworksClean.ipynb
@@ -190,11 +190,11 @@
     "\n",
     "| Name   | Weight [kg ] | Height [cm] | Gender |\n",
     "|--------|--------|-------|--------|\n",
-    "|Charlie | 51     | 160  |   f = 1   |\n",
-    "|Martin  | 72     | 178  |   m = 0   |\n",
-    "|Anke    | 68     | 175  |   f = 1   |\n",
-    "|Bela    | 71     | 182  |   m = 0   |\n",
-    "|Simon   | 90     | 194  |   m = 0   |  \n",
+    "|Susan   | 51     | 160  |   f = 1   |\n",
+    "|Max     | 72     | 178  |   m = 0   |\n",
+    "|Lucy    | 68     | 175  |   f = 1   |\n",
+    "|Pete    | 71     | 182  |   m = 0   |\n",
+    "|Paul    | 90     | 194  |   m = 0   | \n",
     "\n",
     "Given that data, we want to predict someone’s gender given their weight and height. In order to do so, we'll train the simple 2 input network from above, that has one hidden layer with 2 neurons, and a single output :\n",
     "![alt text](https://github.com/DLR-SC/Neural-Network-Tutorial/raw/master/images/SimpleNetwork2.png)\n",
@@ -274,9 +274,9 @@
     "\n",
     "| Name   | Weight [kg]<br>(minus 60)  | Height [cm]<br>(minus 170)| Gender |\n",
     "|--------|--------|-------|--------|\n",
-    "|Charlie | -9     | -10  |   1    |\n",
+    "|Susan | -9     | -10  |   1    |\n",
     "\n",
-    "Feed-forward of for example the input \"Charlie\"  $x=[-9,-10]$ through the network yields:\n",
+    "Feed-forward of for example the input \"Susan\"  $x=[-9,-10]$ through the network yields:\n",
     "$$h_1 = f(\\pmb{w^{(1)}}\\cdot \\pmb{x}+b_1), \\: h_2 = f(\\pmb{w^{(2)}}\\cdot \\pmb{x}+b_2)$$\n",
     "\n",
     "$$h_1 = h_2 = f(1*(-9) + 1*(-10) +0)= f(-19) = 5.603*10^{-9}$$\n",
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feed forward charlie\n"
+    "# Feed forward susan\n"
    ]
   },
   {
@@ -508,11 +508,11 @@
     "\n",
     "| Name   | Weight [kg]<br>(minus 60)  | Height [cm]<br>(minus 170)| Gender |\n",
     "|--------|--------|-------|--------|\n",
-    "|Charlie | -9     | -10  |   1   |\n",
-    "|Martin  | 12     | 8  |   0   |\n",
-    "|Anke    | 8      | 5  |   1   |\n",
-    "|Bela    | 11     | 12  |   0   |\n",
-    "|Simon   | 30     | 24  |   0   |  \n",
+    "|Susan | -9     | -10  |   1   |\n",
+    "|Max  | 12     | 8  |   0   |\n",
+    "|Lucy    | 8      | 5  |   1   |\n",
+    "|Pete    | 11     | 12  |   0   |\n",
+    "|Paul   | 30     | 24  |   0   |  \n",
     "\n",
     "The training process is as follows:\n",
     "1. Choose one sample from our dataset. This is what makes it gradient descent - we only operate on one sample at a time.\n",
@@ -660,8 +660,8 @@
     "\n",
     "| Name   | Weight (kg) | Hight (cm) | Gender |\n",
     "|--------|--------|-------|--------|\n",
-    "|Margrit | 9      | 0  |   f = 1   |\n",
-    "|Jan     | 10     | -3  |   m = 0   |\n"
+    "|Mary | 9      | 0  |   f = 1   |\n",
+    "|John     | 10     | -3  |   m = 0   |\n"
    ]
   },
   {
@@ -670,7 +670,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Predict for Margrit"
+    "# Predict for Mary"
    ]
   },
   {
@@ -679,7 +679,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Predict for Jan"
+    "# Predict for John"
    ]
   },
   {
@@ -786,7 +786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
